# pw

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  Cross.toml  README.md  build.rs  deny.toml  minica.pem  pw_config.json  typos.toml
.cargo/: config.toml
.github/workflows/: build_test.yml  ci.yml
client/: Cargo.toml
client/src/: main.rs
client/src/data_types/: machine.rs  pw.messages.proto  utils.rs
client/src/platform/: machine.rs  utils.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs  pw.messages.proto
config/: client_config.json
docs/: CROSS.md  NOTES.md
pwclient/: Cargo.toml  build.rs
pwclient/src/: main.rs
pwservice/: Cargo.toml
pwservice/resources/test/proc/: cpuinfo2  meminfo2
pwservice/resources/test/proc/822/: status
pwservice/src/: communicator.rs  main.rs
pwservice/src/platform/: error.rs  machine.rs  metrics.rs  mod.rs  processes.rs  utils.rs
resources/test/proc/: meminfo  version
resources/test/proc/822/: status
service/: Cargo.toml  build.rs
service/resources/test/proc/: cpuinfo  stat
service/src/: main.rs
service/src/platform/: machine.rs  mod.rs  utils.rs
src/: main.rs
src/data_types/: machine.rs  mod.rs  pw.proto  traits.rs  utils.rs
