[workspace]
resolver = "2"
members = [ "common", "pwclient", "pwservice" ]

[profile.dev]
debug = true
opt-level = 0

[profile.release]
debug = false
opt-level = 3
lto = true

[workspace.package]
rust-version = "1.82.0"
version = "0.0.1"
repository = "https://github.com/ooonak/pw"
homepage = "https://github.com/ooonak/pw"
authors = [ "abc <a@b.c>" ]
edition = "2021"
license = "Apache-2.0"
categories = ["linux-system-tools"]
description = "pw: Process Watcher tool."

[workspace.dependencies]
common = { version = "0.0.1", path = "./common" }
tokio = "1.41.0"
zenoh = { version = "1.1.0", default-features = true }
zenoh-ext = { version = "1.1.0", features = ["unstable"] }
anyhow = "1.0.93"
vergen-gix = { version = "1.0.2", features = ["build", "cargo", "rustc"] }
env_logger = "0.11.5"
log = "0.4.22"
