[package]
name = "client"
description = "Client for process watcher."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
common = { path = "../common" }
ratatui = "0.29.0"
tokio = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
