[package]
name = "common"
description = "Library with common features for process watcher."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
chrono = "0.4.38"
prost = "0.13.3"

[build-dependencies]
prost-build = "0.13.3"
