[package]
name = "pwclient"
description = "Process Watcher tool client with text user interface."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
ratatui = "0.29.0"

[package.metadata.cargo-machete]
ignored = ["zenoh-ext", "ratatui"]
