[package]
name = "pwclient"
description = "Process Watcher tool client with text user interface."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
ratatui = "0.29.0"

[build-dependencies]
anyhow = { workspace = true }
vergen-gix = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["zenoh-ext", "ratatui"]
