[package]
name = "pwservice"
description = "Process Watcher tool service."
rust-version = { workspace = true }
version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
categories = { workspace = true }

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }
zenoh-ext = { workspace = true }
env_logger = "0.11.5"
log = "0.4.22"

[build-dependencies]
anyhow = "1.0.93"
vergen-gix = { version = "1.0.2", features = ["build", "cargo", "rustc"] }
